twitter app is installed and configured

--- a/index.html
+++ b/index.html
@@ -30,5 +30,7 @@
       gtag("js", new Date());
       gtag("config", "G-DSL4Z03NFE");
     </script>
+  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
   </body>
 </html>
