--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       content="Xiaohan Zou's portfolio in macOS style."
     />
 
-    <link rel="icon" href="/logo/favicon.svg" />
+    <link rel="icon" href="/logo/ip2.png" />
     <link rel="apple-touch-icon" href="/logo/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -17,7 +17,7 @@
     -->
     <link rel="manifest" href="/manifest.json" />
 
-    <title>Xiaohan Zou's Portfolio</title>
+    <title>Prabin's Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
